--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let todo of todos">
-    {{ todo.label }}<li>-Tag (click)="toggle(todo)
+  <li *ngFor="let todo of todos"(click)="toggle(todo)>
+    {{ todo.label }}
   </li>
 </ul>
